[metadata]
name = unixlog
version = 0.0.1
author = Raahool Kumeriya
author_email = rahul.kumeriya@outlook.com
description = Python program prints unix style logging on terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raahoolkumeriya/unixlog
project_urls =
    Bug Tracker = https://github.com/raahoolkumeriya/unixlog/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src